[package]
name = "memory-offset-match-core"
version = "0.1.0"
authors = ["Eike Siewertsen <eike@technocreatives.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.1.7"
nom = "5.0.0"
darling = "0.9.0"
syn = { version = "0.15.38", features = [ "extra-traits" ] }
proc-macro2 = "0.4.30"
quote = "0.6.12"