[package]
name = "memory-offset-match-test"
version = "0.1.0"
authors = ["Eike Siewertsen <eike@technocreatives.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory-offset-match = { path = "../memory-offset-match" }
